# bajofon

./: .gitignore  README.md  llm_test.py  llm_test_2.py  main.py  note_taker.py  pyproject.toml  requirements.txt  take_screenshot.sh
.devcontainer/: Dockerfile  devcontainer.json
